first assignment ML

--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -44,21 +44,45 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys of iris_dataset: \n",
+      "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])\n",
+      ".. _iris_dataset:\n",
+      "\n",
+      "Iris plants dataset\n",
+      "--------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "    :Number of Instances: 150 (50 in each of three classes)\n",
+      "    :Number of Attributes: 4 numeric, pre\n",
+      "...\n",
+      "Target names: ['setosa' 'versicolor' 'virginica']\n",
+      "Feature names: \n",
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
+      "Type of data: <class 'list'>\n",
+      "Shape of data: (150, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# # Print dataset to get an idea of the tables\n",
-    "# # Print Bunch\n",
-    "# print(\"Keys of iris_dataset: \\n{}\".format(iris_dataset.keys()))\n",
-    "# # Print beginning of the description\n",
-    "# print(iris_dataset['DESCR'][:193] + \"\\n...\")\n",
-    "# # Print species of flowers\n",
-    "# print(\"Target names: {}\".format(iris_dataset['target_names']))\n",
-    "# # Print features\n",
-    "# print(\"Feature names: \\n{}\".format(iris_dataset['feature_names']))\n",
-    "# # Print type of the data\n",
-    "# print(\"Type of data: {}\".format(type(iris_dataset['feature_names'])))\n",
-    "# # Print shape of the data\n",
-    "# print(\"Shape of data: {}\".format(iris_dataset['data'].shape))"
+    "# Print dataset to get an idea of the tables\n",
+    "# Print Bunch\n",
+    "print(\"Keys of iris_dataset: \\n{}\".format(iris_dataset.keys()))\n",
+    "# Print beginning of the description\n",
+    "print(iris_dataset['DESCR'][:193] + \"\\n...\")\n",
+    "# Print species of flowers\n",
+    "print(\"Target names: {}\".format(iris_dataset['target_names']))\n",
+    "# Print features\n",
+    "print(\"Feature names: \\n{}\".format(iris_dataset['feature_names']))\n",
+    "# Print type of the data\n",
+    "print(\"Type of data: {}\".format(type(iris_dataset['feature_names'])))\n",
+    "# Print shape of the data\n",
+    "print(\"Shape of data: {}\".format(iris_dataset['data'].shape))"
    ]
   },
   {
