added the heapsorting algorithm and the RMSE

--- a/Week1/AssignmentWeek1.ipynb
+++ b/Week1/AssignmentWeek1.ipynb
@@ -357,6 +357,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The function np.random.Generator.choice is used because this can handle a 2d array\n",
+    "X_train, y_train = np.random.default_rng().choice(X, 90, axis=0),  np.random.choice(y,90)\n",
+    "X_test, y_test = np.random.default_rng().choice(X, 60, axis=0), np.random.choice(y,60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -382,17 +393,15 @@
        "[True, True, True, True]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The function np.random.Generator.choice is used because this can handle a 2d array\n",
-    "X_train, y_train = np.random.default_rng().choice(X, 90, axis=0),  np.random.choice(y,90)\n",
-    "X_test, y_test = np.random.default_rng().choice(X, 60, axis=0), np.random.choice(y,60)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.40, shuffle=True, random_state=0)\n",
     "\n",
-    "    \n",
     "def check_shape(M):    \n",
     "    if M.shape in [(90,4),(90,),(60,4),(60,)]:\n",
     "        return True\n",
@@ -404,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -465,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -489,14 +498,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 1, 0, 0, 0, 0, 1]\n"
+      "[2, 1, 0, 2, 0, 2, 0, 1, 1, 1]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_14836\\593778742.py:8: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_24028\\593778742.py:8: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
       "  return mode(kNN_Y)[0][0]\n"
      ]
     }
@@ -540,16 +549,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([1, 0, 0, 2, 2, 2, 1, 0, 1, 0]), [0, 0, 1, 1, 1, 0, 0, 0, 0, 1])"
+       "(array([2, 1, 0, 2, 0, 2, 0, 1, 1, 1]), [2, 1, 0, 2, 0, 2, 0, 1, 1, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -584,10 +593,10 @@
     {
      "data": {
       "text/plain": [
-       "[False, True, False, False, False, False, False, True, False, False]"
+       "[True, True, True, True, True, True, True, True, True, True]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,13 +631,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://en.wikipedia.org/wiki/Heapsort"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -643,12 +645,14 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "https://en.wikipedia.org/wiki/Heapsort\n",
+    "By a Heapsort the program creates a binary tree. Whereby the new example will be placed in the tree based on the neighbours.\n",
+    "Heapsort has performance time of $O(n\\log{}n)$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -669,33 +673,130 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 0, 2, 0, 2, 0, 1, 1, 1]\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_14836\\593778742.py:8: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_24028\\593778742.py:8: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  return mode(kNN_Y)[0][0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def knn_heap(X,y,example,k=5):\n",
+    "    '''Classify example using majority vote of the k closest items in X with labels y. \n",
+    "    For every example calculate the closed neighbours and place them in a heap sort.\n",
+    "    Only keep the 5 closests items and remove the others. Check this for all the items'''\n",
+    "    heap = []\n",
+    "    euclidean_arr = [(euclidean(example, items), i) for i, items in enumerate(X)]\n",
+    "    for distance in euclidean_arr:\n",
+    "        if len(heap) < k:\n",
+    "            heap.append(distance)\n",
+    "            if len(heap) == k:\n",
+    "                heap.sort()\n",
+    "        else:\n",
+    "            farthest = heap[-1]\n",
+    "            if distance < farthest:\n",
+    "                heap[-1] = distance\n",
+    "                heap.sort()\n",
+    "                \n",
+    "    kNN_Y = [y[j] for j in [i[1] for i in heap]]\n",
+    "    return mode(kNN_Y)[0][0]\n",
+    "\n",
+    "knn_heap_values = [knn(X_train,y_train,i) for i in X_test[:10]] \n",
+    "print(knn_heap_values) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mesure performance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_24028\\593778742.py:8: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  return mode(kNN_Y)[0][0]\n",
+      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_24028\\2351576731.py:19: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
       "  return mode(kNN_Y)[0][0]\n"
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time of arg sort: 5.921889999997802\n",
+      "Execution time of heap sort: 5.5405661999830045\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "iterations = 1000\n",
+    "\n",
+    "# Calculate time arg sort\n",
+    "start_time = time.perf_counter()\n",
+    "\n",
+    "for i in range(iterations):\n",
+    "    [knn(X_train,y_train,i) for i in X_test[:10]]\n",
+    "    \n",
+    "end_time = time.perf_counter()\n",
+    "time_function1 = end_time - start_time\n",
+    "\n",
+    "# Calculate time heap sort\n",
+    "start_time = time.perf_counter()\n",
+    "\n",
+    "for i in range(iterations):\n",
+    "    [knn_heap(X_train,y_train,i) for i in X_test[:10]]\n",
+    "    \n",
+    "end_time = time.perf_counter()\n",
+    "time_function2 = end_time - start_time\n",
+    "\n",
+    "# Compare the execution times\n",
+    "print(\"Execution time of arg sort:\", time_function1)\n",
+    "print(\"Execution time of heap sort:\", time_function2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "[0, 0, 1, 1, 1, 0, 0, 0, 0, 1]"
+       "[True, True, True, True, True, True, True, True, True, True]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def knn_heap(X,y,example,k=5):\n",
-    "    '''Classify example using majority vote of the k closest items in X with labels y.'''\n",
-    "    #WRITE YOUR CODE HERE\n",
-    "    return mode(kNN_Y)[0][0]\n",
-    "\n",
-    "\n",
-    "[ knn(X_train,y_train,i) for i in X_test[:10]] \n",
-    " "
+    "# Compare y_test with the knn_values and knn_heap_values for y\n",
+    "[y_test[:10][i] == knn_values[i] == knn_heap_values[i] for i in range(len(knn_values))]"
    ]
   },
   {
@@ -799,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -837,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1028,7 +1129,7 @@
        "4        4747.58  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1111,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1167,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1221,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1267,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1316,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-03-01T12:52:16.779457Z",
@@ -1345,7 +1446,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-03-01T12:52:16.785764Z",
@@ -1386,7 +1487,7 @@
        "       [False, False, False, ..., False, False, False]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-03-01T12:52:16.792895Z",
@@ -1444,7 +1545,7 @@
        "       False, False, False, False, False, False])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1532,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1558,7 +1659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_14836\\346195263.py:1: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+      "C:\\Users\\Tycho\\AppData\\Local\\Temp\\ipykernel_24028\\346195263.py:1: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  assert isinstance(v2,np.float)\n"
      ]
@@ -1571,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1654,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1691,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1718,7 +1819,7 @@
        "(True, True)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1767,16 +1868,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5395.032"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " kNN_Y = [y[i] for i in np.argsort([euclidean(example, node) for node in X])[:k]]"
+    "(8480.43 + 3842.07 + 6981.84 + 4129.66 + 3541.16) / 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1803,7 +1915,7 @@
        "(5395.032, array([4945.8]))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,16 +1924,23 @@
     "from scipy.spatial.distance import euclidean\n",
     "\n",
     "def  knn(ExamplesX,ExamplesY,instance,k=5):\n",
-    "    k = [ExamplesY[i] for i in np.argsort([euclidean(instance, example) for example in ExamplesX])[:k]]\n",
-    "    return np.mean(k)\n",
-    "    \n",
+    "    kNN_Y = [ExamplesY[i] for i in np.argsort([euclidean(instance, example) for example in ExamplesX])[:k]]\n",
+    "    return np.mean(kNN_Y)\n",
     "\n",
     "knn(X_train,Y_train,X_test[0,:]), Y_test[0]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $$RMSE = \\sqrt{\\frac{\\sum_{i=1}^{n}(y_i-\\hat{y})^2}{n}}$$\n",
+    "<!-- ## $$ \\textrm{rmse} = \\sqrt{\\frac{1}{N}\\sum_{i=1}^N(a_i - p_i)^2} $$ -->"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1840,10 +1959,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def rmse(u,v): ## u, v are 1D arrays of the same length\n",
-    "    #WRITE YOUR CODE HERE\n",
+    "    return np.sqrt(np.mean([(u[i] - v[i])**2 for i in range(len(u)) if len(u) == len(v)]))\n",
     "\n",
     "rmse([2,3,5,6,7,34],[2,3,5,6,7,34])"
    ]
@@ -2305,10 +2435,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
