--- a/Week1/AssignmentWeek1.ipynb
+++ b/Week1/AssignmentWeek1.ipynb
@@ -1979,8 +1979,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $$SS_{res} = \\sum_{i}(y_i - f_i)^2 = \\sum_{i}e_i^2 $$\n",
+    "### $$SS_{tot} = \\sum_{i}(y_i - \\hat{y})^2 $$\n",
+    "## $$ R^2 = 1 - \\frac{SS_{res}}{SS_{tot}} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "deletable": false,
     "execution": {
@@ -1999,10 +2008,22 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9166666666666666"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def rsquare(predicted,true): ## u, v are 1D arrays of the same length\n",
-    "    #WRITE YOUR CODE HERE\n",
+    "    if len(u) == len(v):\n",
+    "        return 1 - sum((y - np.mean(true))**2 for y in true) / sum((y - y_hat)**2 for y in true for y_hat in predicted) \n",
     "\n",
     "rsquare([2,3,5,6,7,34],[2,3,5,6,7,34])"
    ]
