edit the euclidean distance

--- a/Week2/AssignmentWeek2.ipynb
+++ b/Week2/AssignmentWeek2.ipynb
@@ -187,6 +187,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ead06937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_1 = np.random.rand(5, 2)\n",
+    "cluster_2 = np.random.rand(10, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "6882ffef",
    "metadata": {
     "deletable": false,
@@ -207,26 +218,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.069592186548989"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Start by completing the two functions below, which both takes matrices of size n_samples*n_features\n",
     "# and return the distance between those clusters according to the linkage functions\n",
-    "from scipy.spatial.distance import euclidean\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
     "\n",
     "def average_linkage(cluster1, cluster2) -> np.float64:\n",
     "    '''calculates the average distance between cluster 1 and cluster 2'''\n",
-    "    distance = np.mean([euclidean(x,y) for x in cluster1 for y in cluster2])\n",
+    "    distance = np.mean(euclidean_distances(cluster1, cluster2))\n",
     "    return distance\n",
     "\n",
     "def complete_linkage(cluster1, cluster2) -> np.float64:\n",
     "    '''calculates maximum distance between cluster 1 and cluster 2'''\n",
-    "    distance = max([euclidean(x,y) for x in cluster1 for y in cluster2])\n",
+    "    distance = np.max(euclidean_distances(cluster1, cluster2))\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c148bc17",
    "metadata": {
     "deletable": false,
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "644eadc4",
    "metadata": {},
    "outputs": [],
@@ -298,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8533a7e3",
    "metadata": {
     "deletable": false,
@@ -319,18 +341,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 2)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def clustering_step(input_data, cluster_dict, linkage_type: str) -> tuple:    \n",
     "    ''' Function that, given an input of vectors such as in the hoorcollege slides\n",
@@ -355,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "faa8109e",
    "metadata": {
     "deletable": false,
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "69aed64c",
    "metadata": {
     "deletable": false,
@@ -436,27 +447,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [0.08143514 0.61500394 0.90450601] dict_values([array([0.08143514, 0.61500394, 0.90450601]), (array([0.33485253, 0.80987543, 0.15173794]), array([0.13528172, 0.40632847, 0.52749242])), array([0.16454875, 0.68913464, 0.94140079]), array([0.85296967, 0.54442726, 0.67724826])])\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "arrays used as indices must be of integer (or boolean) type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 31\u001b[0m\n\u001b[0;32m     26\u001b[0m         output_labels[point_ids] \u001b[38;5;241m=\u001b[39m i\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m output_labels\n\u001b[1;32m---> 31\u001b[0m \u001b[43magglomerative_clustering\u001b[49m\u001b[43m(\u001b[49m\u001b[43msamples\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumber_of_clusters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinkage_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43maverage\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[17], line 26\u001b[0m, in \u001b[0;36magglomerative_clustering\u001b[1;34m(input_points, number_of_clusters, linkage_type)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, point_ids \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(clusters\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i, point_ids, clusters\u001b[38;5;241m.\u001b[39mvalues())\n\u001b[1;32m---> 26\u001b[0m     output_labels[point_ids] \u001b[38;5;241m=\u001b[39m i\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output_labels\n",
-      "\u001b[1;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# in our version, we will define a number of clusters we want to find\n",
     "# you may also define this in sklearn for your comparison later\n",
