--- a/Week1/AssignmentWeek1.ipynb
+++ b/Week1/AssignmentWeek1.ipynb
@@ -3054,7 +3054,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3068,7 +3068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.7"
   },
   "pycharm": {
    "stem_cell": {
